src/test/resources/fixtures/classes/access-modifiers.710.php
<?php

class classAM1
{
    const <error descr="'NO_VISIBILITY_CONSTANT' should be declared with access modifier.">NO_VISIBILITY_CONSTANT</error> = '';
    const <error descr="'LIST_A' should be declared with access modifier.">LIST_A</error> = '',
          LIST_B = '';
    public const ALREADY_PUBLIC_CONSTANT = '';
    private const PRIVATE_CONSTANT = '';
}
